Replace deprecated Class#newInstance calls